--- a/src/projectpillar/.md
+++ b/src/projectpillar/.md
@@ -32,7 +32,7 @@
               <!-- <div class="button">
                 <a
                   href="https://form.ecellsakec.in/"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                   class="btn"
                   >Register Now</a
